--- a/client/index.html
+++ b/client/index.html
@@ -7,8 +7,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="description" content="木芒果的聊天室 - 一个支持多种AI模型的开源聊天应用程序" />
-    <title>木芒果的聊天室</title>
+    <meta name="description" content="AI朋友圈" />
+    <title>AI朋友圈</title>
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
     <link rel="apple-touch-icon" href="assets/apple-touch-icon-180x180.png" />
